# talker

./: .dockerignore  .env.example  .env.receptionist  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: architecture.md  livekit-architecture.md  livekit-receptionist.md
docs/plans/: 2026-03-10-talker-phase1.md  2026-03-10-talker-rag-system.md
docs/specs/: 2026-03-10-talker-design.md  2026-03-11-admin-panel-design.md
scripts/: seed_langfuse_prompts.py
talker/: alembic.ini  cli.py  config.py  livekit_agent.py  main.py  middleware.py
talker/agents/: conversation.py  orchestrator.py  rag_tools.py  safety.py  screener.py  tools.py  voice_mapper.py
talker/alembic/: env.py
talker/alembic/versions/: 1fae8f057dd9_add_visitor_tracking_tables.py  393a9ae2e392_add_voice_features_table.py  66b7b4da3606_multi_user_auth_tables.py  9436dc433733_add_knowledge_tables_with_pgvector.py  a3c7e1b49d82_add_voice_analysis_turns_table.py  b6cf4ef71605_add_scheduled_assessments.py  e6b496b96c9f_add_admin_notes_to_sessions.py  fda94a9f177a_uuid_sessions_and_per_message_.py
talker/capabilities/: __init__.py  base.py  voice_analysis.py
talker/instruments/: asrs.yaml  gad-7.yaml  pcl-5.yaml  phq-9.yaml
talker/knowledge/clinical/: adhd.md  anxiety.md  comorbidity.md  depression.md  ptsd.md
talker/knowledge/psychoeducation/: asrs-guide.md  gad-7-guide.md  pcl-5-guide.md  phq-9-guide.md  treatment-approaches.md
talker/knowledge/resources/: crisis-resources.md  (+1 more)
talker/models/: db.py  knowledge.py  schemas.py
talker/personas/: __init__.py  assessor.py  receptionist.py
talker/routes/: admin.py  assess.py  auth.py  clinician.py  deps.py  history.py  livekit.py  main.py  report.py  settings.py  voice.py
talker/services/: admin_repo.py  auth.py  database.py  embeddings.py  export.py  ingest.py  instruments.py  invite.py  llm.py  rag.py  report.py  schedule.py  session_memory.py  session_repo.py  tracing.py  trends.py  visitor_repo.py  voice.py  voice_features.py
talker/templates/: assess.html  assess_conversation.html  assess_screening.html  assess_summary.html  assess_voice.html  base.html  error_generic.html  history.html  index.html  livekit_voice.html  report.html  session_detail.html  settings.html  trends.html
tests/: conftest.py  test_admin.py  test_assessor.py  test_auth.py  test_capabilities.py  test_clinician.py  test_conversation.py  test_deployment.py  test_embeddings.py  test_export.py  test_ingest.py  test_instruments.py  test_invite.py  test_livekit_routes.py  test_llm.py  test_models.py  test_orchestrator.py  test_rag.py  test_rag_tools.py  test_receptionist.py  test_report.py  test_safety.py  test_schedule.py  test_screener.py  test_session_memory.py  test_session_repo.py  test_tools.py  test_trends.py  test_voice_features.py  test_voice_mapper.py  test_voice_provider.py
(+21 files in other folders)
