[project]
name = "talker"
version = "0.1.0"
description = "Psychology pre-assessment voice assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "jinja2>=3.1.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic-ai>=1.0.0",
    "langfuse>=2.0.0",
    "pyyaml>=6.0.0",
    "weasyprint>=62.0",
    "faster-whisper>=1.0.0",
    "piper-tts>=1.4.0",
    "deepgram-sdk>=5.0.0",
    "elevenlabs>=2.0.0",
    "praat-parselmouth>=0.4.0",
    "pgvector>=0.3.0",
    "openai>=1.50.0",
    "click>=8.0.0",
    "httpx>=0.27.0",
    "authlib>=1.3.0",
    "bcrypt>=4.0.0",
    "itsdangerous>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["talker*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.5",
]
